<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/white"
	android:orientation="vertical">
  <TextView android:id="@+id/Contact_title_text"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:textSize="18sp"
  	android:textColor="@color/white"
  	android:gravity="center"
  	android:text="@string/setting_contactus"
  	android:background="@drawable/title_bar_bg"
  	/>
  	<TextView
		android:id="@+id/Contact_Version"
		android:layout_below="@+id/Contact_title_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/setting_contact_us_version"
		android:textSize="20sp"
		android:paddingTop="10dip"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:layout_centerHorizontal="true">
	</TextView>
  	<TextView
		android:id="@+id/Contact_Name"
		android:layout_below="@+id/Contact_Version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/setting_contact_us_name"
		android:textSize="20sp"
		android:textStyle="bold"
		android:textColor="@color/black"
		android:layout_centerHorizontal="true">
	</TextView>
  	<TextView
		android:id="@+id/Contact_Website"
		android:layout_below="@+id/Contact_Name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="5dip"
		android:textSize="18sp"
		android:textColor="@color/black"
		android:autoLink="all"
		android:text="@string/setting_contact_us_website">
	</TextView>
  	<TextView
		android:id="@+id/Contact_Weibo"
		android:layout_below="@+id/Contact_Website"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="5dip"
		android:textSize="18sp"
		android:textColor="@color/black"
		android:text="@string/setting_contact_us_weibo">
	</TextView>
  	<TextView
		android:id="@+id/Contact_QQ"
		android:layout_below="@+id/Contact_Weibo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="5dip"
		android:textSize="18sp"
		android:textColor="@color/black"
		android:text="@string/setting_contact_us_qq">
	</TextView>
	<TextView
		android:id="@+id/Contact_Service"
		android:layout_below="@+id/Contact_QQ"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="5dip"
		android:textSize="18sp"
		android:textColor="@color/black"
		android:autoLink="phone"
		android:text="@string/setting_contact_us_service">
	</TextView>
	<TextView
		android:id="@+id/Contact_Business"
		android:layout_below="@+id/Contact_Service"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="5dip"
		android:textSize="18sp"
		android:textColor="@color/black"
		android:autoLink="phone"
		android:text="@string/setting_contact_us_business">
	</TextView>
</RelativeLayout>